--- a/Web/Web.config
+++ b/Web/Web.config
@@ -16,7 +16,7 @@
   <connectionStrings>
     <clear />
     <!--<add name="context" connectionString="Data Source=|DataDirectory|data.sdf" providerName="System.Data.SqlServerCe.4.0" />-->
-    <add name="context" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CodeFirst;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="context" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Energy;Integrated Security=True" providerName="System.Data.SqlClient" />
 	  
   </connectionStrings>
   <system.web>
