--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Areas\Articles\Controllers\PageController.cs" />
     <Compile Include="Areas\Articles\Controllers\TagCloudPartialController.cs" />
     <Compile Include="Areas\Knockout\Controllers\ArticlesController.cs" />
+    <Compile Include="Areas\Knockout\Controllers\InputController.cs" />
     <Compile Include="Areas\Knockout\Controllers\MainController.cs" />
     <Compile Include="Areas\Knockout\KnockoutAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -213,6 +214,7 @@
     <Content Include="Areas\Knockout\Views\Main\Tags.cshtml" />
     <Content Include="Areas\Knockout\Views\Articles\Index.cshtml" />
     <Content Include="Areas\Knockout\Views\Shared\ArticlePartial.cshtml" />
+    <Content Include="Areas\Knockout\Views\Input\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
