--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -116,6 +116,8 @@
     <Content Include="Areas\Knockout\Scripts\TaskPartial.js" />
     <Content Include="Content\AdminPanel.css" />
     <Content Include="Content\handheld.css" />
+    <Content Include="Content\Html\Home\app.html" />
+    <Content Include="Content\ipad.css" />
     <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -217,6 +219,8 @@
     <Content Include="Areas\Knockout\Views\Articles\Index.cshtml" />
     <Content Include="Areas\Knockout\Views\Shared\ArticlePartial.cshtml" />
     <Content Include="Areas\Knockout\Views\Input\Index.cshtml" />
+    <Content Include="Views\Shared\_TabletLayout.cshtml" />
+    <Content Include="Areas\Knockout\Views\Input\Index2.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
